
lib_LTLIBRARIES = libmydvb.la
libmydvb_la_SOURCES = mydvb.c \
	dynarray.c \
	descriptor.h descriptor.c \
	info_dvb.h info_dvb.c \
	mhp_desc.h mhp_desc.c \
	mhp_tables.h mhp_tables.c \
	events.h events.c \
	mydvb_info.c \
	mydvb_text.c \
	mydvb_date.c \
	logger.h logger.c \
	mydvb_search.c \
	tables.h tables.c \
	tune.h tune.c \
	util.h util.c


libmydvb_la_CPPFLAGS = -I$(top_srcdir)/include

